# ruststartracker

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  pyproject.toml  rust_build.py
.github/workflows/: main.yml
ruststartracker/: __init__.py  catalog.py  libruststartracker.pyi  scratch.py  star.py  test_backend.py  test_catalog.py  test_integration.py  test_star.py
src/: lib.rs  star.rs  tree.rs  trianglefinder.rs  util.rs
