[package]
name = "ruststartracker"
version = "0.1.0"
edition = "2021"

[lib]
name = "ruststartracker"
crate-type = ["cdylib"]

[dependencies]
itertools = "0.13.0"
kdtree = "0.7.0"
maths-rs = "0.2.6"
nalgebra = "0.33.0"
polyfit-rs = "0.2.1"
pyo3 = { version = "0.21.0", features = ["extension-module"] }
numpy = "0.21.0"
