[tool.poetry]
name = "ruststartracker"
version = "0.1.0"
description = ""
authors = ["Nicolas Tobler <nitobler@gmail.com>"]
readme = "README.md"
include = [
    { path = "ruststartracker/star_catalog.tsv", format = ["sdist", "wheel"] },
    { path = "ruststartracker/libruststartracker.so", format = ["wheel"] },
]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.0"
opencv-python-headless = "^4.9.0"

[tool.poetry.group.dev.dependencies]
matplotlib = "^3.9.2"
scipy = "^1.14.1"
viztracer = "^0.16.3"
pytest = "^8.3.3"
pre-commit = "^3.8.0"
astropy = "^6.1.4"

[tool.poetry.build]
script = "rust_build.py"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # pydocstring
    "D",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # boolean trap
    "FBT001",
    # Built in shadowing
    "A001",
    "C416",
    "NPY",
    "PERF",
    "W",
    # Pep8 naming
    "N",
    "UP",
    "S",
    "C4",
    "DTZ",
    "T10",
    "EXE",
    "ISC",
    "ICN",
    "LOG",
    "PIE",
    "Q",
    "RET",
    "SLF001",
    "TID",
    "TCH",
    "ARG",
    "PTH",
    "ANN",
]
ignore = [
    "ANN101", # Annotating self is not really needed
]
pydocstyle.convention = "google"

[tool.ruff.lint.per-file-ignores]
"test*" = ["D100", "D103", "SLF001", "ANN", "S101"]
